--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,17 +1,85 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+    <ion-toolbar>
       <ion-title>
-      Managing Users
+        <div class="invoice-container">
+          <span>Invoice#45123</span>
+          <div class="status-indicator"></div>
+        </div>
       </ion-title>
-  </ion-toolbar>
+    </ion-toolbar>
   </ion-header>
- 
-  <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-      <ion-toolbar>
-      <ion-title size="large">Managing Users</ion-title>
-      </ion-toolbar>
-  </ion-header>
- 
-  <app-users></app-users>
+  
+  <ion-content class="ion-padding">
+    <h2>Conduct Sale</h2>
+    
+    <ion-card>
+      <ion-card-content>
+        <ion-item>
+         
+          <ion-input placeholder = "Generic customer"></ion-input>
+          <ion-toggle slot="end" checked></ion-toggle>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+    
+    <div class="item-selection">
+      <h3>Item Selection</h3>
+      <ion-item>
+        <ion-label position="floating">Item Name</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+      
+      <div class="quantity-selector">
+        <ion-item>
+          <ion-label position="floating">Quantity</ion-label>
+          <ion-input type="number" value="1"></ion-input>
+        </ion-item>
+       
+      </div>
+      
+      <ion-button expand="block" color="success" class="add-button">
+        Add Item
+      </ion-button>
+    </div>
+    
+    <div class="summary">
+      <h3>Summary</h3>
+      <p class="total">Total: $ 45.00</p>
+      
+      <ion-list>
+        <ion-item lines="none" class="header-row">
+          <ion-label>Item</ion-label>
+          <ion-label class="ion-text-end">Quantity</ion-label>
+          <ion-label class="ion-text-end">Price</ion-label>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label>Coconut Bread</ion-label>
+          <ion-label class="ion-text-end">1</ion-label>
+          <ion-label class="ion-text-end">$ 15.00</ion-label>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label>Currants Roll</ion-label>
+          <ion-label class="ion-text-end">2</ion-label>
+          <ion-label class="ion-text-end">$ 7.00</ion-label>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label>Jam Tart</ion-label>
+          <ion-label class="ion-text-end">2</ion-label>
+          <ion-label class="ion-text-end">$ 14.00</ion-label>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label>Chicken Pie</ion-label>
+          <ion-label class="ion-text-end">1</ion-label>
+          <ion-label class="ion-text-end">$ 9.00</ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+    
+    <ion-button expand="block" color="success" class="confirm-button">
+      Confirm Sale
+    </ion-button>
   </ion-content>
