--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,80 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-header {
+  ion-toolbar {
+    --background: #e00000;
+    --color: white;
+    
+    ion-title {
+      font-weight: bold;
+    }
+    
+    ion-buttons {
+      ion-button {
+        --color: white;
+      }
+    }
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.item-list {
+  margin-bottom: 16px;
+  
+  ion-item {
+    --padding-start: 8px;
+    --inner-padding-end: 8px;
+    
+    ion-label {
+      h2 {
+        font-weight: 500;
+        margin-bottom: 4px;
+      }
+      
+      p {
+        color: #666666;
+      }
+    }
+    
+    .quantity-controls {
+      display: flex;
+      align-items: center;
+      
+      ion-button {
+        --padding-start: 4px;
+        --padding-end: 4px;
+      }
+      
+      span {
+        min-width: 30px;
+        text-align: center;
+      }
+    }
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.summary-card {
+  margin-bottom: 16px;
+  
+  ion-card-header {
+    padding-bottom: 0;
+  }
+  
+  ion-card-content {
+    padding-top: 8px;
+  }
 }
 
-#container a {
-  text-decoration: none;
+.confirm-button {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  --background: #e00000;
+}
+
+ion-footer {
+  ion-tab-bar {
+    --background: #f8f8f8;
+    
+    ion-tab-button {
+      --color: #666666;
+      --color-selected: #e00000;
+    }
+  }
 }
